minor high contrast fixes

--- a/theme/style.less
+++ b/theme/style.less
@@ -112,3 +112,18 @@
         color: @black !important;
     }
 }
+
+/** high contrast **/
+.hc {
+    .ui.menu, #downloadArea,
+    .menubar .ui.menu.fixed .ui.item.editor-menuitem .item.active {
+        background-color: black !important;
+        color: white !important;
+    }
+    .ui.red.corner.label {
+        border-color: #d4000d!important;
+    }
+    .menubar .ui.menu.fixed .item.editor-menuitem .ui.grid {
+        border-color: white !important;
+    }
+}
